

HEAD
====


v3.8 (2010-12-01)
=================
This was supposed to go into 3.7 but I forgot to merge in time..
Changes:
- hexdump: colorize characters 0x00 thru 0x1F in tty mode


v3.7 (2010-12-01)
=================
Changes:
- libxml_helper: redo xml_newnode to take a parent and value string
- list: unify naming of reverse-direction functions
- misc: HX_zveclen now returns unsigned from (previous: int)
- dir: HXdir functions now work with struct HXdir * instead of void *
Fixes:
- list: avoid potential shadow warning when using HXclist_{shift,pop}
Enhancements:
- doc: add doc/api.txt that lists the minimum required versions for symbols


v3.6 (2010-08-16)
=================
Fixed:
- bitmap: set/clear/test had no effect due to wrong type selection
- bitmap: avoid left-shift larger than type on 64-bit
- string: fixed buffer overflow in HX_split when too few fields were present
  in the input


v3.5 (2010-08-01)
=================
Fixed:
- format2: failure to skip escaped char in "%(echo foo\ bar)" was corrected
- proc: properly check for HXPROC_STDx--HXPROC_STDx_NULL overlap
- strquote: do not cause allocation with invalid format numbers
Enhancements:
- format2: add the %(exec) function
- format2: add the %(shell) function
- format2: security feature for %(exec) and %(shell)
- format2: add the %(snl) function
- string: HX_strquote gained HXQUOTE_LDAPFLT (LDAP search filter) support
- string: HX_strquote gained HXQUOTE_LDAPRDN (LDAP relative DN) support
Changes:
- format1: removed older formatter in favor of format2
- format2: add check for empty key
- format2: function-specific delimiters
- format2: do nest-counting even with normal parentheses
- format2: check for zero-argument function calls
- hashmap: do not needlessy change TID when no reshape was done
- string: HX_basename (the fast variant) now recognizes the root directory
- string: HX_basename now returns the trailing component with slashes