@@ -1,3 +1,4 @@
+/hxdirstamp
 /t?-cast
 /t?-compile
 /t?-deque
