@@ -2,6 +2,9 @@
 
 HEAD
 ====
+Enhancements:
+- hxdirstamp: new development helper program for library users
+  (Note to distros: should be in libHX-devel; it is only used during builds)
 
 
 v3.8 (2010-12-01)
